@@ -2697,13 +2697,13 @@ sub get_combo_data ($ $ $) {
 	}
 	
 	#TODO: Allow an xml that exists in the working dir
-	my $printerPath = "$libdir/db/source/printer/$p->{'id'}.xml";
-	my $driverPath =  "$libdir/db/source/driver/$p->{'driver'}.xml";
+	my $printerPath = "$libdir/db/source/printer/".$poid.".xml";
+	my $driverPath =  "$libdir/db/source/driver/".$drv.".xml";
 	my @options = <$libdir/db/source/opt/*.xml>;
 	
 	#printer and driver xmls must exist
-	if (! (-r $printerPath)) {die("The Printer XML for $p->{'id'} does not exist\n");}
-	if (! (-r $driverPath)) {die("The Driver XML for $p->{'driver'} does not exist\n");}
+	if (! (-r $printerPath)) {die("The Printer XML for $poid does not exist\n");}
+	if (! (-r $driverPath)) {die("The Driver XML for $drv does not exist\n");}
 	
 	$combo = $this->{'comboXmlParser'}->parseCombo($printerPath, $driverPath, \@options);
     }
